--- a/app/src/main/resources/templates/profile-menu.html
+++ b/app/src/main/resources/templates/profile-menu.html
@@ -11,83 +11,95 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/profile-menu.css}">
     <title>Edit Profile</title>
 </head>
-<body>
-<nav>
-
-</nav>
-<main>
-    <div class="nav-bar"><div class="side-bar-container">
+<body><header>
+    <nav class="navbar">
+        <a href="/home" class="logo">Morsel</a>
+    </nav>
+</header>
+<div class="nav-bar"><div class="side-bar-container">
+    <nav>
         <nav>
-            <nav>
-                <div class="nav-bar">
-                    <div class="side-bar-container">
-                        <div class="side_navbar">
-                            <!-- App Name -->
-                            <div class="app-nav-bar">
-                                <div class="app-nav-bar-name">Morsel</div>
-                                <div class="app-nav-bar-version">v1.0.0</div>
-                            </div>
+            <div class="nav-bar">
+                <div class="side-bar-container">
+                    <div class="side_navbar">
+                        <!-- App Name -->
+                        <div class="app-nav-bar">
+                            <div class="app-nav-bar-name">Morsel</div>
+                            <div class="app-nav-bar-version">v1.0.0</div>
+                        </div>
+                        <div class="func-block">
+                            <a class="home" href="/home">
+                                <p>Home</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
+                                </svg>
+                            </a>
+                            <a class="messages" href="/messages">
+                                <p>Messages</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
+                                </svg>
+                            </a>
+                            <!-- Notifications -->
+                            <a href="/notifications" class="flex items-center space-x-2">
+                                <p>Notifications</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22s4-2 4-6V9a4 4 0 0 0-8 0v7c0 4 4 6 4 6z"></path>
+                                </svg>
+                            </a>
+                            <!-- Followers/Following -->
+                            <a href="/followers" class="flex items-center space-x-2">
+                                <p>Followers / Following</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
+                                </svg>
+                            </a>
+                            <a href="/recipes">
+                                <p>MyRecipes</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18M9 6l6 6-6 6"></path>
+                                </svg>
+                            </a>
+                            <a href="/bookmarks">
+                                <p>Bookmarks</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 20.943V3.057L4.447 8.672l7.553 12.271z"></path>
+                                </svg>
+                            </a>
+                            <a href="/admin">
+                                <p>Admin Panel</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M6 12h12m-6-6 6 6-6 6"></path>
+                                </svg>
+                            </a>
+                        </div>
 
-                            <!-- Main Navigation Links -->
-                            <div class="func-block">
-                                <a href="/home" class="active">
-                                    <p>Home</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
-                                    </svg>
-                                </a>
-                                <a href="/recipes">
-                                    <p>Recipes</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18M9 6l6 6-6 6"></path>
-                                    </svg>
-                                </a>
-                                <a href="/favorites">
-                                    <p>Favorites</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 20.943V3.057L4.447 8.672l7.553 12.271z"></path>
-                                    </svg>
-                                </a>
-                                <a href="/about">
-                                    <p>About Us</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 3v18M3 12h18"></path>
-                                    </svg>
-                                </a>
-                                <a href="/admin">
-                                    <p>Admin Panel</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M6 12h12m-6-6 6 6-6 6"></path>
-                                    </svg>
-                                </a>
-                            </div>
+                        <!-- Other Quick Links -->
+                        <div class="func-block">
+                            <span>Quick Links</span>
+                            <a href="/new-recipe">
+                                <p>Add Recipe</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
+                                </svg>
+                            </a>
+                        </div>
 
-                            <!-- Other Quick Links -->
-                            <div class="func-block">
-                                <span>Quick Links</span>
-                                <a href="/new-recipe">
-                                    <p>Add Recipe</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
-                                    </svg>
-                                </a>
-                            </div>
-
-                            <!-- Logout -->
-                            <div class="func-block">
-                                <a class="logout" href="/logout">
-                                    <p>Logout</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
-                                    </svg>
-                                </a>
-                            </div>
+                        <!-- Logout -->
+                        <div class="func-block">
+                            <a class="logout" href="/logout">
+                                <p>Logout</p>
+                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
-            </nav>
-
+            </div>
         </nav>
+
+    </nav>
     </div></div>
     <div class="home-section">
         <div class="single-section-box profile-menu">
