--- a/app/src/main/resources/templates/createRecipe.html
+++ b/app/src/main/resources/templates/createRecipe.html
@@ -95,20 +95,35 @@
 </div></div>
 <div class="container mx-auto p-4">
     <h1 class="text-3xl font-bold mb-4">Create a New Post</h1>
-    <form th:action="@{/post}" method="post" enctype="multipart/form-data" class="space-y-4">
-        <div>
-            <label for="title" class="block text-gray-600 font-semibold mb-2">Post Title</label>
-            <input type="text" id="title" name="title" placeholder="Enter post title" class="border p-2 w-full rounded" required>
+    <form class="space-y-4" th:action="@{/posts}" th:method="POST" th:object="${postCommand}">
+        <h3>Add post</h3>
+        <div class="form-group">
+            <div class= "label-holder justify-content-center text-gray-600 font-semibold mb-2">
+                <label for="title" class="h3 mb-2">Title</label>
+        </div>
+            <input type="text" placeholder="Title" id="title" name="title" th:field="*{title}">
+            <small th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="text-warning"style="font-size: 15px">Error Text Here</small>
         </div>
 
-        <div>
-            <label for="content" class="block text-gray-600 font-semibold mb-2">Post Content</label>
-            <textarea id="content" name="content" placeholder="Enter post content" class="border p-2 w-full rounded" required></textarea>
+        <div class="form-group">
+            <div class= "label-holder justify-content-center text-gray-600 font-semibold mb-2">
+                <label for="content" class="h3 mb-2">Content</label>
+            </div>
+            <textarea th:field="*{content}" type="text" id="content" name="content" placeholder="Enter post content" class="border p-2 w-full rounded" ></textarea>
+            <small th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="text-warning"style="font-size: 15px">Error Text Here</small>
         </div>
-
-        <div>
+        <div class="form-group">
+            <label for="categoryType" class="block text-gray-600 font-semibold mb-2">Category</label>
+            <select id="categoryType" name="categoryType" th:field="*{categoryType}" class="block w-full text-gray-600 border p-2 rounded">
+                <option th:each="category : ${T(app.category.model.CategoryType).values()}"
+                        th:value="${categoryType}"
+                        th:text="${categoryType}">Select category</option>
+                <p th:if="${#fields.hasErrors('categoryType')}" th:errors="*{categoryType}" class="text-warning"></p>
+            </select>
+        </div>
+        <div class="form-group">
             <label for="image" class="block text-gray-600 font-semibold mb-2">Upload Image</label>
-            <input type="file" id="image" name="image" accept="image/*" class="block w-full text-gray-600 border p-2 rounded">
+            <input type="file" id="image" name="image" accept="image/*" th:field="*{imageFile}" class="block w-full text-gray-600 border p-2 rounded">
         </div>
 
         <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Create Post</button>
