--- a/app/src/main/resources/static/css/login_register.css
+++ b/app/src/main/resources/static/css/login_register.css
@@ -6,7 +6,7 @@
 body {
     margin: 0;
     background-size: cover;
-    background: linear-gradient(45deg, #9b1747, #de238d); /* Pink to purple gradient */
+    background: linear-gradient(45deg, #9b1747, #de238d);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -65,7 +65,7 @@ body {
 }
 
 .button:hover {
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+    box-shadow: 0 0 10px rgb(222, 35, 141);
     transform: scale(1.05);
 }
 
@@ -124,7 +124,7 @@ input, select {
     width: 100%;
     padding: 15px;
     margin-top: 8px;
-    background-color: rgba(255, 255, 255, 0.07);
+    background-color: rgb(217, 38, 101);
     border-radius: 5px;
     color: #ffffff;
     border: none;
@@ -138,7 +138,7 @@ input, select {
 
 button {
     width: 100%;
-    background: radial-gradient(circle at 90% top, #d2c8f4 0%, #c4bbeb 10%, #b7aee2 20%, #aaa1d9 30%, #9d94d0 40%);
+    background: radial-gradient(circle at 90% top, #c53366 0%, #fc5dd6 10%, #c42e64 20%, #de238d 30%, #9d94d0 40%);
     color: #ffffff;
     padding: 15px 0;
     font-size: 18px;
