--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
                             </div>
                             <div class="func-block">
                                 <!-- My Profile -->
-                                <a href="/profile" class="flex items-center space-x-2">
+                                <a href="/users/profile" class="flex items-center space-x-2">
                                     <p>My Profile</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
@@ -82,7 +82,7 @@
                             <!-- Other Quick Links -->
                             <div class="func-block">
                                 <span>Quick Links</span>
-                                <a href="/new-recipe">
+                                <a href="/posts/new">
                                     <p>Add Recipe</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
