--- a/app/src/main/resources/templates/profile-menu.html
+++ b/app/src/main/resources/templates/profile-menu.html
@@ -104,7 +104,7 @@
     <div class="home-section">
         <div class="single-section-box profile-menu">
             <div class="profile-header">
-                <img th:src="${#strings.isEmpty(user.profilePicture) ? 'https://icons.veryicon.com/png/o/miscellaneous/user-avatar/user-avatar-male-5.png' : user.profilePicture}" alt="Profile Picture" class="profile-avatar">
+                <img th:src="${#strings.isEmpty(user.profilePicture) ? 'https://i.pinimg.com/736x/fc/04/e2/fc04e2f512d243e8f605b32b64bdc1b3.jpg' : user.profilePicture}" alt="Profile Picture" class="profile-avatar">
                 <h2 th:text="${user.username}" class="profile-name"></h2>
             </div>
 
