--- a/app/src/main/resources/static/css/login_register.css
+++ b/app/src/main/resources/static/css/login_register.css
@@ -6,7 +6,7 @@
 body {
     margin: 0;
     background-size: cover;
-    background: linear-gradient(45deg, #9b1747, #de238d); /* Pink to purple gradient */
+    background: linear-gradient(45deg, #9b1747, #de238d);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -17,17 +17,17 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    justify-content: center; /* Vertically centers content */
-    align-items: center; /* Horizontally centers content */
+    justify-content: center;
+    align-items: center;
     overflow: visible;
 }
 
 .header {
     padding: 4% 7%;
-    background: rgba(155, 23, 71, 0.8); /* Semi-transparent background */
+    background: rgba(155, 23, 71, 0.8);
     border-radius: 8px;
-    width: 95%; /* Full-width with some padding */
-    max-width: 1200px; /* Limits maximum width */
+    width: 95%;
+    max-width: 1200px; 
 }
 
 .header-inner {
@@ -70,40 +70,40 @@ body {
 }
 
 .logo-container {
-    text-align: center; /* Centers the logo container */
-    margin-top: 50px; /* Adds space above the logo */
+    text-align: center;
+    margin-top: 50px;
 }
 
 .logo-big {
     display: inline-block;
-    max-width: 100%; /* Responsive scaling */
-    height: auto; /* Maintains aspect ratio */
+    max-width: 100%;
+    height: auto;
 }
 
 .logo-big img {
     display: block;
-    width: 200%; /* Scales logo size */
+    width: 200%;
     height: auto;
-    max-width: 400px; /* Limits maximum logo size */
-    margin: 0 auto; /* Centers the logo image */
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .form-container {
     max-width: 500px;
-    margin: 20px auto; /* Centers the form container */
+    margin: 20px auto;
     padding: 20px;
-    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black background */
+    background-color: rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     box-shadow: 0 0 40px rgba(8, 7, 16, 0.31);
 }
 
 hr {
-    width: 80%; /* Adjusts the width of the line */
+    width: 80%;
     border: 0;
     height: 2px;
-    background: linear-gradient(90deg, #9b1747, #de238d); /* Matches your gradient colors */
-    margin: 30px auto; /* Adds spacing and centers it */
-    border-radius: 5px; /* Slight rounding for a smoother look */
+    background: linear-gradient(90deg, #9b1747, #de238d);
+    margin: 30px auto;
+    border-radius: 5px;
 }
 
 form h3 {
@@ -123,13 +123,13 @@ label {
 input, select {
     width: 100%;
     padding: 15px;
-    margin-top: 8px;
+    margin-top: 18px;
     background-color: rgba(255, 255, 255, 0.07);
     border-radius: 5px;
     color: #ffffff;
     border: none;
-    font-size: 14px;
-    font-weight: 300;
+    font-size: 17px;
+    font-weight: 400;
 }
 
 ::placeholder {
@@ -137,14 +137,15 @@ input, select {
 }
 
 button {
-    width: 100%;
-    background: #d92665; /* Solid pink background */
+    width: 107%;
+    background: #d92665;
     color: #ffffff;
     padding: 15px 0;
     font-size: 18px;
     font-weight: 600;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 30px;
 }
 
 button:hover {
@@ -157,24 +158,27 @@ input:hover, select:hover {
 }
 
 .form-already {
-    color: #e5e5e5;
-    font-weight: 300;
+    color: #ffffff;
+    font-weight: 500;
     text-align: center;
-    font-size: 12px;
-    margin: 20px auto auto;
+    font-size: 18px;
+    margin: 20px auto;
 }
 
 .form-already a {
     text-decoration: none;
-    background: radial-gradient(circle at 90% top, #fc5dd6 0%, #d92665 10%, #faf9f9 20%, #fc5dd6 30%, #978ef1 40%);
-    background-size: 200%;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transition: 0.5s ease-out;
+    background: none;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 15px;
+    border-radius: 10px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+    transition: all 0.1s ease-out;
 }
 
 .form-already a:hover {
-    background-position: right;
-    transition: 0.5s ease-out;
+    color: #ffffff;
+    background-color: #d92665;
+    transform: scale(1.1);
 }
