--- a/app/src/main/resources/templates/login.html
+++ b/app/src/main/resources/templates/login.html
@@ -37,9 +37,9 @@
             <label for="password">Password</label>
             <input type="password" placeholder="Password" id="password" th:field="*{password}" required>
             <p class="alert-warning" th:if="${errorMessage}" th:text="${errorMessage}"></p>
-        <button type="submit">Log In</button>
 
-        <p class="form-already">Don't have an account? <a th:href="@{/register}">Register now</a>!</p>
+        <button type="submit">Log In</button>
+        <p class="form-already">Don't have an account? <a th:href="@{/register}">Register</a></p>
         </form>
 </section>
 </main>
