--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <a href="/home" class="logo">Morsel</a>
+        <a class="logo">Morsel</a>
         <div class="search-bar">
             <input type="text" placeholder="Search..." />
             <button>Search</button>
