--- a/app/src/main/resources/templates/profile-menu.html
+++ b/app/src/main/resources/templates/profile-menu.html
@@ -13,7 +13,7 @@
 </head>
 <body><header>
     <nav class="navbar">
-        <a href="/home" class="logo">Morsel</a>
+        <a class="logo"> Morsel </a>
     </nav>
 </header>
 <div class="nav-bar"><div class="side-bar-container">
