--- a/app/src/main/resources/templates/createRecipe.html
+++ b/app/src/main/resources/templates/createRecipe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Post</title>
-    <link rel="stylesheet" href="../static/css/post.css">
+    <link rel="stylesheet" th:href="@{/css/createPost.css}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -95,8 +95,8 @@
 </div></div>
 <div class="container mx-auto p-4">
     <h1 class="text-3xl font-bold mb-4">Create a New Post</h1>
-    <form class="space-y-4" th:action="@{/posts}" th:method="POST" th:object="${postCommand}">
-        <h3>Add post</h3>
+    <form th:action="@{/posts}" th:method="POST" th:object="${createRecipe}">
+    <h3>Add post</h3>
         <div class="form-group">
             <div class= "label-holder justify-content-center text-gray-600 font-semibold mb-2">
                 <label for="title" class="h3 mb-2">Title</label>
