--- a/app/src/main/resources/templates/profile-menu.html
+++ b/app/src/main/resources/templates/profile-menu.html
@@ -31,7 +31,7 @@
                             <a class="home" href="/home">
                                 <p>Home</p>
                                 <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
                                 </svg>
                             </a>
                             <a class="messages" href="/messages">
