--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -41,14 +41,14 @@
                                 <a class="messages" href="/api/messages">
                                     <p>Messages</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 16c0 1.1.9 2 2 2h3v3l4-3h7c1.1 0 1.99-.9 1.99-2L22 4c0-1.1-.9-2-2-2z"></path>
                                     </svg>
                                 </a>
                                 <!-- Notifications -->
                                 <a href="/notifications" class="flex items-center space-x-2">
                                     <p>Notifications</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22s4-2 4-6V9a4 4 0 0 0-8 0v7c0 4 4 6 4 6z"></path>
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22c1.1 0 1.99-.9 1.99-2H10c0 1.1.89 2 1.99 2zm6-6V9c0-3.31-2.69-6-6-6S6 5.69 6 9v7l-2 2v1h16v-1l-2-2z"></path>
                                     </svg>
                                 </a>
 
@@ -62,26 +62,24 @@
                                 <a href="/posts">
                                     <p>MyRecipes</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18M9 6l6 6-6 6"></path>
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4 3h16c1.1 0 1.99.9 1.99 2L22 19c0 1.1-.9 2-2 2H4c-1.1 0-1.99-.9-1.99-2L2 5c0-1.1.9-2 2-2zM12 8h4v4h-4z"></path>
                                     </svg>
                                 </a>
                                 <a href="/api/bookmarks">
                                     <p>Bookmarks</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 20.943V3.057L4.447 8.672l7.553 12.271z"></path>
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M15 0H5c-1.1 0-1.99.9-1.99 2L3 22l8-4 8 4V2c0-1.1-.9-2-2-2z"></path>
                                     </svg>
                                 </a>
                                 <a href="/users">
                                     <p>Admin Panel</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M6 12h12m-6-6 6 6-6 6"></path>
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
                                     </svg>
                                 </a>
                             </div>
 
-                            <!-- Other Quick Links -->
                             <div class="func-block">
-                                <span>Quick Links</span>
                                 <a href="/posts/new">
                                     <p>Add Recipe</p>
                                     <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -108,14 +106,15 @@
 <main>
     <section class="recipe-feed">
         <h1>Recipes</h1>
-        <div class="recipes-grid" th:if="${recipes}" th:each="recipe : ${recipes}">
+        <div class="recipes-grid" th:if="${posts}" th:each="posts : ${posts}">
             <div class="recipe-card">
-                <img th:src="${recipe.imageUrl}" alt="Recipe image" class="recipe-image"/>
+                <img th:src="${posts.imageUrl}" alt="Recipe image" class="recipe-image"/>
                 <div class="recipe-details">
-                    <h2 th:text="${recipe.title}">Recipe Title</h2>
-                    <p>By <span th:text="${recipe.authorName}">Author Name</span></p>
+                    <h2 th:text="${posts.title}">Recipe Title</h2>
+
+                    <p>By <span th:text="${posts.owner}">Author Name</span></p>
                     <p class="rating">Rating:
-                        <span th:text="${recipe.rating}">4.5</span>
+                        <span th:text="${posts.rating}">4.5</span>
                         <span>stars</span>
                     </p>
                 </div>
